Added put endpoint for /process
